--- a/hw01_dataframe exploration.Rmd
+++ b/hw01_dataframe exploration.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "LArain Data Analysis via Time Series Analysis"
+title: "dataframe exploration"
 author: "Zuheng(David) Xu"
 date: '2018-09-11'
 output:
